Fix Fabric and dedicated server runs